--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
 	margin: 0;
 	padding: 0;
 	background: #E6EAEB;
-	font-family: Arial, '微软雅黑', '宋体', sans-serif
+	font-family: Arial, '微软雅黑', '黑体', sans-serif
 }
 .alert-box {
 	display: none;
