--- a/index.html
+++ b/index.html
@@ -4,150 +4,156 @@
 <meta charset="UTF-8">
 <!--[if IE 8]><style>.ie8 .alert-circle,.ie8 .alert-footer{display:none}.ie8 .alert-box{padding-top:75px}.ie8 .alert-sec-text{top:45px}</style><![endif]-->
 <title>Gatern</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
+<meta http-equiv="refresh" content="1;url=https://gt-out.com/">
 <style>
-body {
-	margin: 0;
-	padding: 0;
-	background: #E6EAEB;
-	font-family: Arial, '微软雅黑', '黑体', sans-serif
-}
-.alert-box {
-	display: none;
-	position: relative;
-	margin: 100px auto 0;
-	padding: 180px 85px 22px;
-	border-radius: 10px 10px 0 0;
-	background: #FFF;
-	box-shadow: 5px 9px 17px rgba(102,102,102,0.75);
-	width: 286px;
-	color: #FFF;
-	text-align: center
-}
-.alert-box p {
-	margin: 0
-}
-.alert-circle {
+
+.preloader {
 	position: absolute;
-	top: -50px;
-	left: 111px
+	z-index: 20
 }
-.alert-sec-circle {
-	stroke-dashoffset: 0;
-	stroke-dasharray: 735;
-	transition: stroke-dashoffset 1s linear
+
+.main-loader,.preloader {
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0
 }
-.alert-sec-text {
+
+.main-loader {
+	position: fixed;
+	transition: .2s;
+	background: #fff;
+	z-index: 999999!important;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: 1
+}
+
+@supports ((-webkit-backdrop-filter:none) or (backdrop-filter:none)) {
+	.main-loader {
+		background: hsla(0,0%,100%,.2);
+		-webkit-backdrop-filter: blur(100px);
+		backdrop-filter: blur(100px)
+	}
+}
+
+.main-loader.is-done {
+	visibility: hidden;
+	background: none!important;
+	opacity: 0
+}
+
+.main-loader.is-done .main-loader__animation span {
+	-webkit-animation: none!important;
+	animation: none!important
+}
+
+.main-loader__brand {
+	position: relative
+}
+
+.main-loader__brand svg {
+	z-index: 10;
+	height: 69px;
+	width: 53px
+}
+
+.main-loader__animation:before {
+	background: #02b159;
+	height: 150px;
+	border-radius: 50%;
+	width: 150px;
+	left: -49px;
+	z-index: 5
+}
+
+.main-loader__animation:before,.main-loader__animation span {
+	content: "";
 	position: absolute;
-	top: 11px;
-	left: 190px;
-	width: 76px;
-	color: #000;
-	font-size: 68px
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	right: 0
 }
-.alert-sec-unit {
-	font-size: 34px
-}
-.alert-body {
-	margin: 35px 0
-}
-.alert-head {
-	color: #242424;
-	font-size: 28px
-}
-.alert-concent {
-	margin: 25px 0 14px;
-	color: #7B7B7B;
-	font-size: 18px
-}
-.alert-concent p {
-	line-height: 27px
-}
-.alert-btn {
+
+.main-loader__animation span {
 	display: block;
-	border-radius: 10px;
-	background-color: #4AB0F7;
-	height: 55px;
-	line-height: 55px;
-	width: 286px;
-	color: #FFF;
-	font-size: 20px;
-	text-decoration: none;
-	letter-spacing: 2px
+	width: 140px;
+	height: 140px;
+	border-radius: 50%;
+	border: 1px solid #dfe2e8;
+	left: -43px;
+	-webkit-animation: logoAnimation 3s linear infinite;
+	animation: logoAnimation 3s linear infinite
 }
-.alert-btn:hover {
-	background-color: #6BC2FF
+
+.main-loader__animation span:first-child {
+	-webkit-animation: logoAnimation 3s linear 1s infinite;
+	animation: logoAnimation 3s linear 1s infinite
 }
-.alert-footer {
-	margin: 0 auto;
-	height: 42px;
-	width: 120px
+
+.main-loader__animation span:nth-child(2) {
+	-webkit-animation: logoAnimation 3s linear 2s infinite;
+	animation: logoAnimation 3s linear 2s infinite
 }
-.alert-footer-icon {
-	float: left
+
+.main-loader__animation span:nth-child(3) {
+	-webkit-animation: logoAnimation 3s linear 3s infinite;
+	animation: logoAnimation 3s linear 3s infinite
 }
-.alert-footer-text {
-	float: left;
-	border-left: 2px solid #EEE;
-	padding: 3px 0 0 5px;
-	height: 40px;
-	color: #0B85CC;
-	font-size: 12px;
-	text-align: left
+
+@-webkit-keyframes logoAnimation {
+	0% {
+		opacity: 0;
+		transform: scale(1)
+	}
+
+	20% {
+		opacity: 1
+	}
+
+	80% {
+		opacity: 0;
+		transform: scale(2)
+	}
+
+	to {
+		opacity: 0;
+		transform: scale(3)
+	}
 }
-.alert-footer-text p {
-	color: #7A7A7A;
-	font-size: 22px;
-	line-height: 18px
+
+@keyframes logoAnimation {
+	0% {
+		opacity: 0;
+		transform: scale(1)
+	}
+
+	20% {
+		opacity: 1
+	}
+
+	80% {
+		opacity: 0;
+		transform: scale(2)
+	}
+
+	to {
+		opacity: 0;
+		transform: scale(3)
+	}
 }
 </style>
-</head>
-<body class="ie8">
-<div id="js-alert-box" class="alert-box"> <svg class="alert-circle" width="234" height="234">
-  <circle cx="117" cy="117" r="108" fill="#FFF" stroke="#43AEFA" stroke-width="17"></circle>
-  <circle id="js-sec-circle" class="alert-sec-circle" cx="117" cy="117" r="108" fill="transparent" stroke="#F4F1F1" stroke-width="18" transform="rotate(-90 117 117)"></circle>
-  <text class="alert-sec-unit" x="82" y="172" fill="#BDBDBD">Secs</text>
-  </svg>
-  <div id="js-sec-text" class="alert-sec-text"></div>
-  <div class="alert-body">
-    <div id="js-alert-head" class="alert-head"></div>
-    <div class="alert-concent">
-      <!-- <p>Gatern</p> -->
-    </div>
-    <a id="js-alert-btn" class="alert-btn" href="https://gatern.com/">立即跳转</a> </div>
-  <div class="alert-footer clearfix"> <svg width="46px" height="42px" class="alert-footer-icon">
-    <circle fill-rule="evenodd" clip-rule="evenodd" fill="#7B7B7B" stroke="#DEDFE0" stroke-width="2" stroke-miterlimit="10" cx="21.917" cy="21.25" r="17"/>
-    <path fill="#FFF" d="M22.907,27.83h-1.98l0.3-2.92c-0.37-0.22-0.61-0.63-0.61-1.1c0-0.71,0.58-1.29,1.3-1.29s1.3,0.58,1.3,1.29 c0,0.47-0.24,0.88-0.61,1.1L22.907,27.83z M18.327,17.51c0-1.98,1.61-3.59,3.59-3.59s3.59,1.61,3.59,3.59v2.59h-7.18V17.51z M27.687,20.1v-2.59c0-3.18-2.59-5.76-5.77-5.76s-5.76,2.58-5.76,5.76v2.59h-1.24v10.65h14V20.1H27.687z"/>
-    <circle fill-rule="evenodd" clip-rule="evenodd" fill="#FEFEFE" cx="35.417" cy="10.75" r="6.5"/>
-    <polygon fill="#7B7B7B" stroke="#7B7B7B" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="35.417,12.16 32.797,9.03 31.917,10.07 35.417,14.25 42.917,5.29 42.037,4.25 "/>
-    </svg>
-    <div class="alert-footer-text">
-      <p>secure</p>
-      安全加密 </div>
-  </div>
-</div>
-<script>
-function alertSet(e) {
-    document.getElementById("js-alert-box").style.display = "block",
-    document.getElementById("js-alert-head").innerHTML = e;
-    var t = 3,
-    n = document.getElementById("js-sec-circle");
-    document.getElementById("js-sec-text").innerHTML = t,
-    setInterval(function() {
-        if (0 == t){
-			location.href="https://gatern.com/";//#时间到后跳转地址
-		}else {
-            t -= 1,
-            document.getElementById("js-sec-text").innerHTML = t;
-            var e = Math.round(t / 10 * 735);
-            n.style.strokeDashoffset = e - 735
-        }
-    },
-    970);
-}
-</script>
-</body>
-</html>
-<script>alertSet('Gatern');</script>
+<div class="main-loader"><div class="main-loader__brand  brand">
+
+  <svg version="1.1" style="position:relative;z-index:9999;" id="图层_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 28 28" style="enable-background:new 0 0 28 28;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#FFFFFF;}
+</style>
+<g>
+	<path class="st0" d="M14.4,27.2H3.7c-1.4,0-2.5-1.1-2.5-2.5V3.6c0-1.4,1.1-2.5,2.5-2.5h20.9c1.4,0,2.5,1.1,2.5,2.5v23.2h-5V6.1H6.2
+		v16.1h5.7v-8.1h5v10.6C16.9,26.1,15.8,27.2,14.4,27.2z"/>
+</g>
+</svg> <div class="main-loader__animation"><span></span> <span></span> <span></span> <span></span></div></div></div>
