--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <!--[if IE 8]><style>.ie8 .alert-circle,.ie8 .alert-footer{display:none}.ie8 .alert-box{padding-top:75px}.ie8 .alert-sec-text{top:45px}</style><![endif]-->
 <title>Gatern</title>
-<meta http-equiv="refresh" content="1;url=https://gt-out.com/">
+<meta http-equiv="refresh" content="1;url=https://gt-go.com/">
 <style>
 
 .preloader {
